attempt to add circleci integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,32 @@
 cmake_minimum_required(VERSION 3.15)
 
 # Specify your project's name
-project(ecal_mavlink_bridge)
+project(ecal_mavlink_bridge VERSION 0.1.0)
 
 # Specify at least C++11, better C++17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# configure build types and build c-flags
+if( NOT CMAKE_BUILD_TYPE )
+  # Release, RelWithAssert, RelWithEigenNan
+  set( CMAKE_BUILD_TYPE RelWithAssert) # Choice of Release (ignore assert) and RelWithDebInfo (includes assert)
+endif()
+
+message(WARNING "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
+
+set(CMAKE_CXX_FLAGS_DEBUG  "-O0 -g")          # cmake default: "-g"
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g ")  # cmake default: "-O2 -g -DNDEBUG"
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")     # cmake default: "-O3 -DNDEBUG"
+set(CMAKE_CXX_FLAGS_RELWITHASSERT "-O3")
+
 # Enable strict handling of warnings
 add_definitions("-Wall -Wextra -Werror")
+
+# Set default installation directory
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "Installation Directory" FORCE)
+endif()
 
 # Finds MAVSDK for lacal install
 set(cmake_config_DIR "/home/$ENV{USER}/git/MAVSDK/build/install/lib/cmake")
@@ -44,7 +62,7 @@ target_link_libraries(send_vision_position_estimate
 )
 
 
-find_package(eCAL REQUIRED)
+find_package(eCAL 5.11.3 REQUIRED)
 
 set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})
 find_package(CapnProto REQUIRED)
@@ -80,3 +98,21 @@ target_link_libraries(ecal_odometry_mavlink_bridge
     eCAL::core
     # ... Any other linked libraries
 )
+
+install(TARGETS ecal_odometry_mavlink_bridge test_timesync send_vision_position_estimate
+EXPORT EcalOdometryMavlinkBridgeTargets
+# RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
+# LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+# ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+)
+set_target_properties(ecal_odometry_mavlink_bridge PROPERTIES INSTALL_RPATH "$ORIGIN/../lib" )
+
+# hardcode is easier to manage, than automation script
+file(GLOB SDK_TO_INSTALL "${cmake_config_DIR}/../libmavsdk.so*")
+install(
+FILES 
+  ${SDK_TO_INSTALL}
+TYPE LIB)
+
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/" ${CMAKE_MODULE_PATH})
+include(CPackConfigDeb)
