add ability for ecal_mavlink_bridge to transcode between ned and nwu

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "thirdparty/ecal-common"]
 	path = thirdparty/ecal-common
 	url = https://github.com/vilota-dev/ecal-common.git
+[submodule "thirdparty/basalt-headers"]
+	path = thirdparty/basalt-headers
+	url = https://github.com/chengguizi/basalt-headers.git
+	branch = master-sqrt
