--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ commands:
       - run:
           name: Install eCAL dependency
           command: |
-            sudo add-apt-repository ppa:ecal/ecal-5.11
+            sudo add-apt-repository -y ppa:ecal/ecal-5.11
             sudo apt-get update
             sudo apt-get install ecal
       - run:
