--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,14 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")                                     
 set(CMAKE_CXX_FLAGS_RELWITHASSERT "-O3")
 set(CMAKE_CXX_FLAGS_RELWITHEIGENNAN  "-O3 -DEIGEN_INITIALIZE_MATRICES_BY_NAN")   # enable nan initialisation for eigen
 
+# flags for error
+set(BASALT_CXX_FLAGS "${BASALT_CXX_FLAGS} -Wno-error=class-memaccess")
+
+# setup compiler flags
+set(CMAKE_CXX_FLAGS "${BASALT_CXX_FLAGS} ${BASALT_MARCH_FLAGS} ${BASALT_PASSED_CXX_FLAGS}")
+
+message(STATUS "CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
+
 # Enable strict handling of warnings
 add_definitions("-Wall -Wextra -Werror")
 
